Rename, remove nom, add error types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "epc"
+name = "gs1"
 version = "0.1.0"
 authors = ["Russ Garrett <russ@garrett.co.uk>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 num_enum = "*"
+bitreader = "*"
 nom = "5"
 pad = "*"
 hex = "*"
